--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: 8080
+  port: 803
 spring:
   demo:
     name: demo
-    url: jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&allowMultiQueries=true&multiStatementAllow=true&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://127.0.0.1:3306/gushi?useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&allowMultiQueries=true&multiStatementAllow=true&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
     username: root
-    password: 123
+    password: 12345678
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     filters: stat
     maxActive: 20
     initialSize: 1
@@ -24,12 +24,12 @@ spring:
     maxOpenPreparedStatements: 20
   read:
     name: demo
-    url: jdbc:mysql://127.0.0.1:3306/read?useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&allowMultiQueries=true&multiStatementAllow=true&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://127.0.0.1:3306/gushi?useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&allowMultiQueries=true&multiStatementAllow=true&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
     username: root
-    password: 123
+    password: 12345678
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     filters: stat
     maxActive: 20
     initialSize: 1
@@ -45,12 +45,12 @@ spring:
     maxOpenPreparedStatements: 20
   write:
     name: demo
-    url: jdbc:mysql://127.0.0.1:3306/write?useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&allowMultiQueries=true&multiStatementAllow=true&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://127.0.0.1:3306/gushi?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&allowMultiQueries=true&multiStatementAllow=true&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
     username: root
-    password: 123
+    password: 12345678
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     filters: stat
     maxActive: 20
     initialSize: 1
